[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Themes/MenuThemes.tres" type="Theme" id=2]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="MenuOverlay" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 603.0
color = Color( 0.172549, 0.164706, 0.164706, 0.337255 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -36.0
margin_right = 61.0
margin_bottom = 36.0
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 122.0
margin_bottom = 23.0
focus_neighbour_top = NodePath("../QuitButton")
theme = ExtResource( 2 )
text = "Start Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 122.0
margin_bottom = 44.0
theme = ExtResource( 2 )
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 122.0
margin_bottom = 65.0
focus_neighbour_bottom = NodePath("../StartButton")
theme = ExtResource( 2 )
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
